fixed parallel access error